update start_bi.sh to avoid version check prompt